fix correct icon, and fix answers spacing, feedback nice shadows

--- a/resources/styles/components/question.less
+++ b/resources/styles/components/question.less
@@ -148,8 +148,8 @@
 
   // free response
   .free-response {
-    padding: @answer-vertical-spacing @answer-horizontal-buffer;
-    margin: @answer-vertical-spacing 0 0 @answer-vertical-spacing;
+    padding: @answer-horizontal-spacing @answer-horizontal-buffer;
+    margin: @answer-vertical-spacing 0 @answer-horizontal-spacing @answer-vertical-spacing;
     border-left: @answer-horizontal-spacing solid @free-response-background;
     font-style: italic;
   }
@@ -237,6 +237,7 @@
           width: @answer-bubble-size;
           margin-left: -1 * @answer-bubble-size;
           text-align: center;
+          .answer-left-block();
         }
       }
     }
@@ -254,7 +255,10 @@
     max-width: calc(~'100% + @{feedback-horizontal-buffer}');
     margin-left: -1 * @feedback-horizontal-spacing;
     margin-top: -1 * (@answer-vertical-spacing - @popover-arrow-width/10);
+    margin-bottom: @answer-horizontal-spacing;
     z-index: 1;
+    .box-shadow(0 0 10px rgba(0, 0, 0, .25));
+    border: none;
 
     .arrow {
       &::after {
@@ -272,10 +276,10 @@
 
     }
     &.bottom {
-      margin-top: -10px;      
+      margin-top: -5px;      
     }
     &.top {
-      margin-bottom: -10px;
+      margin-bottom: -5px;
     }
 
     .question-feedback-content {
